# app/Http/Requests/Transaction/TransactionRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Requests\Transaction;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class TransactionRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'title'  => ['required', 'string', 'max:255'],
+            'amount' => ['required', 'numeric'],
+        ];
+    }
+}
